<resources>

    <!-- Home -->
    <string name="app_name">GPS Setter</string>
    <string name="xposed_desc">A GPS setter based on the Xposed framework.</string>
    <string name="search">Search</string>
    <string name="address">United States</string>
    <string name="favorites">Favorites</string>
    <string name="export_favorites">Export favorites</string>
    <string name="import_favorites">Import favorites</string>
    <string name="favorites_exported">Favorites exported</string>
    <string name="favorites_imported">Imported %d favorites</string>
    <string name="favorites_import_failed">Couldn\'t read that file</string>
    <string name="export_failed">Export failed</string>
    <string name="address_not_found">Address not found</string>
    <string name="cant_save">Can\'t save</string>
    <string name="location_set">Location set</string>
    <string name="accent_color">Accent colour</string>
    <string name="mode_static">Static</string>
    <string name="mode_route">Route</string>
    <string name="route_speed">Speed</string>
    <string name="route_speed_fmt">%d km/h</string>
    <string name="route_start">Start route</string>
    <string name="route_pick_a">Tap the map to set A (start)</string>
    <string name="route_pick_b">Tap the map to set B (destination)</string>
    <string name="route_routing">Finding a route…</string>
    <string name="route_summary">%1$s · about %2$s</string>
    <string name="route_no_road">Couldn\'t find a road route</string>
    <string name="directions">Directions</string>
    <string name="route_travelling">Travelling</string>
    <string name="route_swap">Swap start and end</string>
    <string name="route_cancel">Cancel route</string>
    <string name="route_details">Details</string>
    <string name="route_b_placeholder">Tap the map to set B</string>
    <string name="route_edit_hint">Tap a point to re-pick · Swap to flip start and end</string>
    <string name="route_travelled">travelled</string>
    <string name="route_arrival">to arrival</string>
    <string name="route_locating">Locating…</string>
    <string name="play_route">Play route (GPX)</string>
    <string name="stop_route">Stop route</string>
    <string name="route_channel">Route playback</string>
    <string name="route_playing">Playing route</string>
    <string name="route_empty">No track points in that file</string>
    <string name="route_started">Route started</string>
    <string name="route_speed_title">Speed (km/h)</string>
    <string name="tile_label">GPS Setter</string>
    <string name="stop">Stop</string>
    <string name="favorite_tile_1">Favorite 1</string>
    <string name="favorite_tile_2">Favorite 2</string>
    <string name="favorite_tile_3">Favorite 3</string>
    <string name="favorite_tile_default">Favorite %d</string>
    <string name="title">Location set notification</string>
    <string name="des">Show notification when location is set</string>
    <string name="location_unset">Location unset</string>
    <string name="no_internet">No Internet</string>
    <string name="getlocation_desc">Get current location</string>
    <string name="addfavorite_desc">Add favorite</string>

    <!-- Errors -->
    <string name="error_xposed_module_missing">Xposed module is not enabled</string>
    <string name="error_xposed_module_missing_desc">Enable this module in LSPosed Manager</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_info">Brought to you by \n@varma322 (2026) \n@jqssun (2024-2025) \n@Android1500 (2022-2023) \n\nA GPS setter based on the Xposed framework.</string>

    <!-- Update -->
    <string name="download_manager_description">Downloading update</string>
    <string name="update_button">Update</string>
    <string name="update_available">Update available</string>
    <string name="bs_update_download_failed">Failed</string>


    <!-- Dialog -->
    <string name="add_fav_dialog_title">Add favorite</string>
    <string name="dialog_button_add">Add</string>
    <string name="location_not_select">Location not selected</string>
    <string name="save">Save</string>

    <!-- SettingActivity -->
    <string name="xposed">Xposed</string>
    <string name="settings">Settings</string>
    <string name="settings_of_accuracy">Accuracy</string>
    <string name="preference_category_general">General</string>
    <string name="enter_valid_input">Enter a valid number</string>
    <string name="delete_favorite_item">Delete favorite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="check_update">Check for updates</string>
    <string name="check_update_summary">Automatically check the latest version from GitHub</string>
    <string name="enable_joystick">Use joystick</string>
    <string name="enable_joystick_summary">Control your location with a joystick (experimental)</string>
    <string name="advanced_hook">Hook system location</string>
    <string name="advanced_summary">Hook system for better location setting (reboot required)</string>
    <string name="random_position">Random location</string>
    <string name="random_position_summary">Use a random location around the set location</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="app_update_failed">Update failed</string>
    <string name="dark_theme">Dark theme</string>

</resources>